@@ -23,27 +23,32 @@ cat > input_options <<\EOF || framework_failure_
 bsd     sum -r
 sysv    sum -s
 crc     cksum
-md5     md5sum -t
-sha1    sha1sum -t
-sha224  sha224sum -t
-sha256  sha256sum -t
-sha384  sha384sum -t
-sha512  sha512sum -t
-blake2b b2sum -t
+md5     md5sum MODE
+sha1    sha1sum MODE
+sha224  sha224sum MODE
+sha256  sha256sum MODE
+sha384  sha384sum MODE
+sha512  sha512sum MODE
+blake2b b2sum MODE
 EOF
 
-while read algo prog; do
-  $prog /dev/null >> out || continue
-  cksum --untagged --algorithm=$algo /dev/null > out-c || fail=1
+while read algo prog mode; do
+  for cmode in '-b' '-t'; do
+    pmode="$mode"
+    case $pmode in MODE) pmode=$cmode;; esac
 
-  case "$algo" in
-    bsd) ;;
-    sysv) ;;
-    crc) ;;
-    *) cksum --check --algorithm=$algo out-c || fail=1 ;;
-  esac
+    $prog $pmode /dev/null >> out || continue
+    cksum --untagged $cmode --algorithm=$algo /dev/null > out-c || fail=1
 
-  cat out-c >> out-a || framework_failure_
+    case "$algo" in
+      bsd) ;;
+      sysv) ;;
+      crc) ;;
+      *) cksum --check --algorithm=$algo out-c || fail=1 ;;
+    esac
+
+    cat out-c >> out-a || framework_failure_
+  done
 done < input_options
 compare out out-a || fail=1
 
